infrastructure/kubernetes/ingress/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: default
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "ingress-staging"
spec:
  rules:
  - host: app-staging.acape.la
    http: &frontend_http
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  - host: dev.acape.la
    http: *frontend_http
  tls:
  - secretName: cloudflare
